# Eve-Online-Mining-Bot

./: .gitignore  main.py  pyproject.toml  requirements.txt
Find interface elements/: default_ids.yaml  submission.csv
Find interface elements/benchmark/: dxcam_benchmark.py  windows_capture.benchmark.py
Find interface elements/graphs/: Untitled-2025-09-18-1827.excalidraw
Find interface elements/output_kaggle/results_v1/runs_v1/y11s_custom/: args.yaml
Find interface elements/output_kaggle/results_v1/runs_v1/y11s_custom2/: args.yaml
Find interface elements/output_kaggle/results_v1/runs_v1/y11s_custom3/: args.yaml
Find interface elements/output_kaggle/results_v1/runs_v1/y11s_custom4/: args.yaml
Find interface elements/output_kaggle/results_v1/runs_v1/y11s_custom5/: args.yaml
Find interface elements/output_kaggle/results_v1/runs_v1/y11s_custom6/: args.yaml
Find interface elements/output_kaggle/results_v1/runs_v1/y11s_custom7/: args.yaml
Find interface elements/output_kaggle/results_v1/runs_v1/y11s_custom8/: args.yaml
Find interface elements/output_kaggle/results_v1/runs_v1/y11s_custom9/: args.yaml
Find interface elements/output_kaggle/results_v2/runs/y11s_custom/: args.yaml  (+1 more)
Find interface elements/screen_capture/: main.py
Find interface elements/screen_capture/examples/: capture_screen_bettercam.py  capture_screen_windows_capture.py
Find interface elements/screen_capture/lib/camera/: bettercam.py
Find interface elements/utils/: EVE-images  classes.txt  convert_for_label_studio.ps1  copy_data.py  export_to_label_studio.py  ffmpeg.py  utils.ipynb
(+2 files in other folders)
