[project]
name = "ml_global"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "notebook (>=7.4.3,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "torchaudio (>=2.7.0,<3.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "html5lib (>=1.1,<2.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "forex-python (>=1.9.2,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "bokeh (>=3.8.0,<4.0.0)",
    "jupyter-bokeh (>=4.0.5,<5.0.0)",
    "ultralytics (>=8.3.199,<9.0.0)",
    "dxcam (>=0.0.5,<0.0.6)",
    "pyglet (>=2.1.9,<3.0.0)",
    "windows-capture (>=1.5.0,<2.0.0)",
    "bettercam (>=1.0.0,<2.0.0)",
    "label-studio-converter (>=0.0.59,<0.0.60)"
]

[virtualenvs]
in-project = false

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
